--- a/source code/style.css
+++ b/source code/style.css
@@ -43,7 +43,7 @@ nav ul li {
     justify-content: center;
     flex-direction: column;
     bottom: 0;
-    height: 75px;
+    height: 84px;
     border-radius: 40px;
     
 }
@@ -71,6 +71,7 @@ nav ul li {
 }
 .icons i {
     margin-top: 2px;
+    cursor: pointer;
 }
 .songlist{
     display: flex;
@@ -115,10 +116,13 @@ nav ul li {
 
 .songinfo div{
     padding-left: 10px;
-    font-size:x-large;
+    margin-top: 3px;
+    font-size: x-large;
     font-weight: bold;
 }
+
 .gif{
     opacity: 0;
     transition:opacity 1s ease-in;
+   
 }
